--- a/src/conf.py.in
+++ b/src/conf.py.in
@@ -30,32 +30,36 @@ release = '0'
 # Add any Sphinx extension module names here, as strings. They can be
 # extensions coming with Sphinx (named 'sphinx.ext.*') or your custom
 # ones.
-extensions = [
-    'breathe',
-    'exhale'
-]
 
-# Setup the breathe extension
-breathe_projects = {
-    # "FLAME GPU 2": "./xml"
-}
-breathe_default_project = "FLAME GPU 2"
 
-# Setup the exhale extension
-exhale_args = {
-    # These arguments are required
-    "containmentFolder":     "./api",
-    "rootFileName":          "library_root.rst",
-    "rootFileTitle":         "Library API",
-    "doxygenStripFromPath":  "..",
-    # Suggested optional arguments
-    "createTreeView":        True,
-    # TIP: if using the sphinx-bootstrap-theme, you need
-    # "treeViewIsBootstrap": True,
-    # With  exhaleExecutesDoxygen=False, it looks in `doxyoutput/xml`
-    "exhaleExecutesDoxygen": False,
-    # "exhaleDoxygenStdin":    "INPUT = C:/Users/rob/fgpu2/include"
-}
+# If the 
+if @USE_BREATHE_EXHALE@:
+
+    extensions = [
+        'breathe',
+        'exhale'
+    ]
+
+    # Setup the breathe extension
+    breathe_projects = {
+        "FLAME GPU 2": "@API_DOCS_XML_PATH@"
+    }
+    breathe_default_project = "FLAME GPU 2"
+
+    # Setup the exhale extension
+    exhale_args = {
+        # These arguments are required
+        "containmentFolder":     "@EXHALE_CONTAINMENT_FOLDER@",
+        "rootFileName":          "library_root.rst",
+        "rootFileTitle":         "Library API",
+        "doxygenStripFromPath":  "..",
+        # Suggested optional arguments
+        "createTreeView":        True,
+        # TIP: if using the sphinx-bootstrap-theme, you need
+        # "treeViewIsBootstrap": True,
+        # With  exhaleExecutesDoxygen=False, it looks in `doxyoutput/xml`
+        "exhaleExecutesDoxygen": False,
+    }
 
 # Tell sphinx what the primary language being documented is.
 primary_domain = 'cpp'
@@ -86,7 +90,7 @@ html_theme_options = {
     'display_version': True,
     'prev_next_buttons_location': 'bottom',
     'style_external_links': False,
-    'vcs_pageview_mode': '',
+    # 'vcs_pageview_mode': '',
     'style_nav_header_background': 'black',
     # Toc options
     'collapse_navigation': True,
@@ -99,4 +103,4 @@ html_theme_options = {
 # Add any paths that contain custom static files (such as style sheets) here,
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
-html_static_path = ['_static']
+html_static_path = ['@RELPATH_CONFIG_TO_STATIC@']
