--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Update documentation" -a || true
+        git commit -m "Update documentation $GITHUB_SHA" -a || true
         # The above command will fail if no changes were present, so we ignore
         # the return code.
     - name: Push changes
