--- a/src/conf.py.in
+++ b/src/conf.py.in
@@ -33,12 +33,19 @@ release = '0'
 
 html_logo = "@RELPATH_CONFIG_TO_STATIC@/img/flamegpu2-icon-notext-128.png"
 
+extensions = [
+    'sphinx_tabs.tabs',
+    'sphinx_copybutton'
+]
+
 # If the 
 if @USE_BREATHE_EXHALE@:
 
     extensions = [
         'breathe',
-        'exhale'
+        'exhale',
+        'sphinx_tabs.tabs',
+        'sphinx_copybutton'
     ]
 
     # Setup the breathe extension
