--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,10 @@ jobs:
         path: FLAMEGPU2
 
     # Install dependencies via apt
+    - name: Install graphviz
+      run: sudo apt -y install graphviz 
+
+    # Install API docs dependencies via apt
     - name: Install doxygen
       if: env.build_api_docs == 'ON'
       run: sudo apt -y install doxygen
