--- a/src/conf.py.in
+++ b/src/conf.py.in
@@ -17,12 +17,12 @@
 
 # -- Project information -----------------------------------------------------
 
-project = 'FLAME GPU 2'
+project = 'FLAME GPU 2' # @todo - base this on the cmake version if available?
 copyright = '2019, University of Sheffield'
 author = 'Paul Richmond, Mozhgan Kabiri-Chimeh, Peter Heywood & Robert Chisholm'
 
 # The full version, including alpha/beta/rc tags
-release = '0'
+release = '0' # @todo - extract this from CMake if possible, else default to 0.
 
 
 # -- General configuration ---------------------------------------------------
@@ -91,6 +91,8 @@ cpp_id_attributes = [
 # Tell sphinx what the pygments highlight language should be.
 highlight_language = 'cuda'
 
+# Set the pygments theme
+pygments_style = 'sphinx'
 
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['_templates']
@@ -116,7 +118,7 @@ html_theme_options = {
     'prev_next_buttons_location': 'bottom',
     'style_external_links': False,
     # 'vcs_pageview_mode': '',
-    'style_nav_header_background': 'black',
+    'style_nav_header_background': '#4d4d4d',
     # Toc options
     'collapse_navigation': False,
     'sticky_navigation': True,
@@ -129,3 +131,8 @@ html_theme_options = {
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
 html_static_path = ['@RELPATH_CONFIG_TO_STATIC@']
+
+# Override the theme with custom css. Use this approach rather than html_style to allow overriding of sphinx extension css (due to stylesheet ordering)
+html_css_files = [
+    'css/flamegpu.css',
+]
