--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-sphinx >= 2.0
+sphinx >=2.0,< 4.1.0 # https://github.com/sphinx-doc/sphinx/issues/9433, https://github.com/michaeljones/breathe/pull/711
 breathe >= 4.13.0
 exhale
 sphinx_rtd_theme
