Redirect where CMake looks for doxygen.cmake in main repo.
This file was moved in v2.0.0-alpha.1 release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ find_package(FLAMEGPU2)
 # Build Doxygen if we can
 if(FLAMEGPU2_FOUND)
     # Load FLAMEGPU2s Doxygen config, implicitly calls find_package(doxygen)
-    include(${FLAMEGPU_ROOT}/cmake/doxygen.cmake)
+    include(${FLAMEGPU_ROOT}/cmake/dependencies/doxygen.cmake)
     mark_as_advanced(FORCE BUILD_API_DOCUMENTATION)
 endif()
 
