--- a/src/conf.py.in
+++ b/src/conf.py.in
@@ -18,8 +18,10 @@
 # -- Project information -----------------------------------------------------
 
 project = 'FLAME GPU 2' # @todo - base this on the cmake version if available?
-copyright = '2019, University of Sheffield'
-author = 'Paul Richmond, Mozhgan Kabiri-Chimeh, Peter Heywood & Robert Chisholm'
+import datetime
+year = datetime.datetime.now().year
+copyright = f'{year}, University of Sheffield'
+author = 'Paul Richmond, Mozhgan Kabiri-Chimeh, Peter Heywood, Robert Chisholm & Matthew Leach'
 
 # The full version, including alpha/beta/rc tags
 release = '0' # @todo - extract this from CMake if possible, else default to 0.
