--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,12 @@ jobs:
         source .venv/bin/activate
         python3 -m pip install -r requirements.txt
 
+    - name: debug
+      working-directory: FLAMEGPU2-docs
+      run: |
+        pwd
+        ls
+        find . -type f -name "*.json"
     - name: Add custom problem matchers for annotations
       working-directory: FLAMEGPU2-docs
       run: echo "::add-matcher::.github/problem-matchers.json"
