--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         python3 -m pip install -r requirements.txt
 
     - name: Add custom problem matchers for annotations
-      run: echo "::add-matcher::FLAMEGPU2-docs.github/problem-matchers.json"
+      run: echo "::add-matcher::FLAMEGPU2-docs/.github/problem-matchers.json"
 
     - name: Configure
       working-directory: FLAMEGPU2-docs
