--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -72,3 +72,4 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: FLAMEGPU2-docs/build/userguide/
         cname: docs.flamegpu.com
+        force_orphan: true
