--- a/src/conf.py.in
+++ b/src/conf.py.in
@@ -38,7 +38,8 @@ html_logo = "@RELPATH_CONFIG_TO_STATIC@/img/flamegpu2-icon-notext-128.png"
 extensions = [
     'sphinx_tabs.tabs',
     'sphinx_copybutton',
-    'sphinx.ext.graphviz'
+    'sphinx.ext.graphviz',
+    'sphinxcontrib.mermaid'
 ]
 
 # If the 
@@ -49,7 +50,8 @@ if @USE_BREATHE_EXHALE@:
         'exhale',
         'sphinx_tabs.tabs',
         'sphinx_copybutton',
-        'sphinx.ext.graphviz'
+        'sphinx.ext.graphviz',
+        'sphinxcontrib.mermaid'
     ]
 
     # Setup the breathe extension
@@ -138,3 +140,11 @@ html_static_path = ['@RELPATH_CONFIG_TO_STATIC@']
 html_css_files = [
     'css/flamegpu.css',
 ]
+
+# Mermaid sphinx extension is failing to auto include mermaid.js
+html_js_files = [
+    'https://unpkg.com/mermaid@10.4.0/dist/mermaid.js'
+]
+
+# Config params passed to mermaid
+mermaid_init_js = "mermaid.initialize({startOnLoad:true,theme: 'neutral'});"
