Ensure sphinx-rtd-theme is 2.x, 3.x deprecates some used configuration options without a direct replacement for non-rtd hosted docs

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ sphinx >= 5.0, <= 7.1
 breathe >= 4.34.0
 docutils
 exhale
-sphinx_rtd_theme
+sphinx_rtd_theme >= 2, < 3
 sphinx_tabs
 sphinx-copybutton
 sphinxcontrib-mermaid
